--- a/MoviesMvc/Views/Shared/_Layout.cshtml
+++ b/MoviesMvc/Views/Shared/_Layout.cshtml
@@ -8,19 +8,21 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <header>
-        <h1>Engberg Movie Library</h1>
-        <nav>
-            <a asp-controller="Movies" asp-action="Index">Home</a>
-            <a asp-controller="Movies" asp-action="Create">Add Movie</a>
-        </nav>
-    </header>
-    <main>
-        @RenderBody()
-    </main>
-    <footer>
-        &copy; Emilia Engberg, 2023
-    </footer>
-    @RenderSection("endOfBody", false)
+    <div class="container">
+        <header>
+            <h1>Engberg Movie Library</h1>
+            <nav>
+                <a asp-controller="Movies" asp-action="Index">Home</a>
+                <a asp-controller="Movies" asp-action="Create">Add Movie</a>
+            </nav>
+        </header>
+        <main>
+            @RenderBody()
+        </main>
+        <footer>
+            &copy; Emilia Engberg, 2023
+        </footer>
+        @RenderSection("endOfBody", false)
+    </div>
 </body>
 </html>
