Change to using btn__primary class

--- a/MoviesMvc/Views/Movies/Create.cshtml
+++ b/MoviesMvc/Views/Movies/Create.cshtml
@@ -23,7 +23,7 @@
         rows="5" cols="40" 
         class="textarea__description" ></textarea>
     <br />
-    <input type="submit" value="Add Movie" class="btn btn__add"/>
+    <input type="submit" value="Add Movie" class="btn btn__primary"/>
 </form>
 
 @section endOfBody
