--- a/MoviesMvc/Views/Movies/Details.cshtml
+++ b/MoviesMvc/Views/Movies/Details.cshtml
@@ -7,6 +7,6 @@
 <h2>@Model.Title (@Model.ReleaseDate.Year)</h2>
 <p>@Model.MovieCategory</p>
 <p>@Model.Description</p>
-<a asp-controller="Movies" asp-action="Details">
+<a asp-controller="Movies" asp-action="Edit" asp-route-id="@Model.Id">
     <input type="button" value="Edit" class="btn btn__primary" />
 </a>
